Add active products api route
